// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Label renders correctly 1`] = `
<test>
  <span
    class="ecl-label ecl-label--low"
  >
    Label
  </span>
</test>
`;

exports[`EC - Label renders correctly with extra attributes 1`] = `
<test>
  <span
    class="ecl-label ecl-label--low"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    Label
  </span>
</test>
`;

exports[`EC - Label renders correctly with extra class names 1`] = `
<test>
  <span
    class="ecl-label ecl-label--low custom-class custom-class--test"
  >
    Label
  </span>
</test>
`;

exports[`EC - Label with missing input data and debug enabled it returns the right warning messages. 1`] = `
<test>
  <span
    class="ecl-label ecl-label--low"
  />
  <!-- ecl2-compliance: label--low -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [label--low] - The {{ label }} property needs to set and filled in.
    </p>
  </div>
</test>
`;
